<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_names"
            android:textSize="30dp"/>
        <EditText android:id="@+id/player1_name"
                  android:layout_width="fill_parent"
                  android:layout_height="50dp"
                  android:hint="@string/player1_name" />
        <CheckBox android:id="@+id/checkbox_computer_play"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/computer_play"
                  android:onClick="onCheckboxClicked"/>
        <EditText android:id="@+id/player2_name"
                  android:layout_width="fill_parent"
                  android:layout_height="50dp"
                  android:hint="@string/player2_name"/>
        <Button   android:id="@+id/level"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="25dp"
                  android:onClick="selectLevel"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_button"
                android:onClick="startGame"/>
    </LinearLayout>